<resources>
    <string name="MAIN_TITLE">JayPS v3.0.0</string>
    <string name="MAIN_EXPORT_TCX">Export TCX</string>
    <string name="PREF_INSTALL_WATCHFACE_URL">http://dl.pebblebike.com/p/jayps-3.0.0.pbw</string>
    <string name="PREF_INSTALL_WATCHFACE_NL_URL">http://dl.pebblebike.com/p/ventoo-2.8.0-nl.pbw</string>
    <string name="app_name">JayPS</string>
    <string name="action_settings">Settings</string>
    <string name="speedfragment_time_label">TIME</string>
    <string name="speedfragment_time_value">00:00</string>
    <string name="speedfragment_distance_label">DISTANCE</string>
    <string name="speedfragment_distance_value">0.0</string>
    <string name="speedfragment_speed_label">SPEED</string>
    <string name="speedfragment_speed_value">0.0</string>
    <string name="speedfragment_avgspeed_label">AVERAGE</string>
    <string name="speedfragment_avgspeed_value">0.0</string>
    <string name="startbuttonfragment_start">START</string>
    <string name="startbuttonfragment_stop">STOP</string>
    <string name="altiudefragment_altitude">ALTITUDE</string>
    <string name="altiudefragment_gpsstatus">GPS STATUS</string>
    <string name="altitude_status_disable">-</string>
    <string name="altitude_status_excellent">EXCELLENT</string>
    <string name="altitude_status_good">GOOD</string>
    <string name="altitude_status_medium">MEDIUM</string>
    <string name="altitude_status_poor">POOR</string>
    <string name="PREF_INSTALL_DEFAULT_CATEGORY_TITLE">Default method</string>
    <string name="PREF_INSTALL_OTHERS_CATEGORY_TITLE">Other versions</string>
    <string name="PREF_INSTALL_WATCHFACE_DEEPLINK">Installation from the Pebble Store [default]</string>
    <string name="PREF_INSTALL_WATCHFACE_DEEPLINK_SUMMARY">Please vote for the app</string>
    <string name="PREF_INSTALL_WATCHFACE_DEEPLINK_URL">pebble://appstore/529289cee07df1fa76000009</string>
    <string name="PREF_INSTALL_WATCHFACE_WEBSITE">Installation from the developers website</string>
    <string name="PREF_INSTALL_WATCHFACE_WEBSITE_SUMMARY"></string>
    <string name="PREF_INSTALL_WATCHFACE_NL">Dutch version</string>
    <string name="PREF_INSTALL_WATCHFACE_NL_SUMMARY">Specific version with Dutch locale</string>
    <string name="PREF_RESET_DATA">Reset data &amp; GPX</string>
    <string name="PREF_RESET_DATA_SUMMARY">Distance, time, speed and ascent</string>
    <string name="ALERT_RESET_DATA_TITLE">Reset data and GPX</string>
    <string name="ALERT_RESET_DATA_MESSAGE">Do you really want to reset distance, time, speed, ascent and GPX?</string>
    <string name="PREF_TRACKS_CATEGORY_TITLE">Tracks</string>
    <string name="PREF_ENABLE_TRACKS_TITLE">Enable tracks</string>
    <string name="PREF_ENABLE_TRACKS_SUMMARY">Auto save locations when gps is started</string>
    <string name="PREF_EXPORT_GPX_TITLE">Export as GPX</string>
    <string name="PREF_EXPORT_GPX_SUMMARY"></string>
    <string name="PREF_EXPORT_TCX_TITLE">Export as TCX</string>
    <string name="PREF_EXPORT_TCX_SUMMARY"></string>
    <string name="PREF_RESET_TRACKS_TITLE">Reset tracks</string>
    <string name="PREF_RESET_TRACKS_SUMMARY">Delete all saved tracks</string>
    <string name="ALERT_RESET_TRACKS_TITLE">Reset Tracks</string>
    <string name="ALERT_RESET_TRACKS_MESSAGE">Do you really want to delete all saved tracks?</string>
    <string name="PREF_OPTIONS_CATEGORY_TITLE">Options</string>
    <string name="PREF_ABOUT_CATEGORY_TITLE">About</string>
    <string name="PREF_AUTOSTART_TITLE">Auto Start</string>
    <string name="PREF_AUTOSTART_SUMMARY">Select this item if you would like JayPS to autostart everytime you
        start cycling
    </string>
    <string name="PREF_UNITS_TITLE">Units</string>
    <string name="PREF_UNITS_DIALOG_TITLE">Units</string>
    <string name="PREF_UNITS_DEFAULT">1</string>
    <string name="PREF_UNITS_UNIT_IMPERIAL">Imperial (miles)</string>
    <string name="PREF_UNITS_UNIT_METRIC">Metric (km/h)</string>
    <string name="PREF_UNITS_UNIT_NAUTICAL_IMPERIAL">Nautical/Imperial (knots + feet)</string>
    <string name="PREF_UNITS_UNIT_NAUTICAL_METRIC">Nautical/Metric (knots + meters)</string>
    <string name="PREF_UNITS_UNIT_RUNNING_IMPERIAL">Running/Imperial (pace: min/mile)</string>
    <string name="PREF_UNITS_UNIT_RUNNING_METRIC">Running/Metric (pace: min/km)</string>
    <string name="REFRESH_INTERVAL_TITLE">GPS Minimum time</string>
    <string name="REFRESH_INTERVAL_DIALOG_TITLE">GPS Minimum time</string>
    <string name="REFRESH_INTERVAL_DEFAULT">103000</string>
    <string name="ORUXMAPS_AUTO_TITLE">Link OruxMaps start</string>
    <string name="ORUXMAPS_AUTO_DIALOG_TITLE">Link OruxMaps start</string>
    <string name="ORUXMAPS_AUTO_DEFAULT">disable</string>
    <string name="PREF_ORUXMAPS">Install OruxMaps</string>
    <string name="PREF_ORUXMAPS_SUMMARY">Install app from Google Play</string>
    <string name="PREF_ORUXMAPS_URL">https://play.google.com/store/apps/details?id=com.orux.oruxmaps</string>
    <string name="CANVAS_MODE_TITLE">Canvas mode</string>
    <string name="CANVAS_MODE_DIALOG_TITLE">Canvas Mode</string>
    <string name="CANVAS_MODE_DEFAULT">disable</string>
    <string name="CANVAS_DISPLAY_UNITS_TITLE">Display units</string>
    <string name="CANVAS_DISPLAY_UNITS_SUMMARY">Display units in Canvas</string>
    <string name="PREF_CANVAS">Install Canvas</string>
    <string name="PREF_CANVAS_SUMMARY">Install app from Google Play</string>
    <string name="PREF_CANVAS_URL">https://play.google.com/store/apps/details?id=com.pennas.pebblecanvas</string>
    <string name="PREF_BLE_CATEGORY_TITLE">BLE Heart Rate Monitor (HRM) or Cycling Speed and Cadence (CSC)</string>
    <string name="PREF_BLE_TITLE">Sensor</string>
    <string name="PREF_BLE_TITLE1">Sensor 1</string>
    <string name="PREF_BLE_TITLE2">Sensor 2</string>
    <string name="PREF_BLE_TITLE3">Sensor 3</string>
    <string name="PREF_BLE_HRM_HRMAX">HRM: Max heart rate</string>
    <string name="PREF_BLE_HRM_HRMAX_SUMMARY">Example: 220 minus your age</string>
    <string name="PREF_BLE_HRM_ZONE_NOTIFICATION_MODE">HRM: Zone alarms</string>
    <string name="PREF_BLE_HRM_ZONE_NOTIFICATION_MODE_DEFAULT">0</string>
    <string name="PREF_BLE_CSC_WHEEL_SIZE">CSC: Wheel circumference (mm)</string>
    <string name="PREF_BLE_CSC_WHEEL_SIZE_SUMMARY">Example: 700x23C => 2133mm</string>
    <string name="PREF_ABOUT_TITLE">@string/MAIN_TITLE</string>
    <string name="PREF_ABOUT_SUMMARY">http://www.pebblebike.com</string>
    <string name="PREF_ABOUT_URL">http://www.pebblebike.com/?utm_source=JayPSApp</string>
    <string name="PREF_USERVOICE">New features</string>
    <string name="PREF_USERVOICE_SUMMARY">Create and vote for new features</string>
    <string name="PREF_USERVOICE_URL">http://pebblebike.uservoice.com/?utm_source=JayPSApp</string>
    <string name="PREF_GOOGLEPLUS">Google+ Community</string>
    <string name="PREF_GOOGLEPLUS_SUMMARY">Exchange ideas and test new versions</string>
    <string name="PREF_GOOGLEPLUS_URL">https://plus.google.com/communities/101059137889634445614</string>
    <string name="PREF_TWITTER">Twitter</string>
    <string name="PREF_TWITTER_SUMMARY">Share on twitter</string>
    <string name="PREF_TWITTER_URL">https://twitter.com/intent/tweet?text=I\'m+using+@VentooBike&amp;url=http://www.pebblebike.com</string>
    <string name="PREF_PEBBLE_STORE">Pebble Store</string>
    <string name="PREF_PEBBLE_STORE_SUMMARY">Please vote for the app</string>
    <string name="PREF_PEBBLE_STORE_URL">pebble://appstore/529289cee07df1fa76000009</string>
    <string name="PREF_DEBUG_TITLE">Debug</string>
    <string name="PREF_DEBUG_SUMMARY">More logs for developers</string>
    <string name="PREF_NAV_PLANNER_URL">http://pebblebike.com/planner/?utm_source=JayPSApp</string>
    <string name="PREF_STRAVA_CATEGORIE_TITLE">Strava Integration</string>
    <string name="PREF_STRAVA_CATEGORIE_SUMMARY"></string>
    <string name="PREF_STRAVA_TITLE">Strava</string>
    <string name="PREF_STRAVA_DELETE_IF_EXISTS_DURING_UPLOAD_TITLE">Delete if already exists</string>
    <string name="PREF_STRAVA_DELETE_IF_EXISTS_DURING_UPLOAD_SUMMARY">During upload, delete a previously uploaded track (this will avoid error if you try to upload a track, continue the record and upload it again)</string>
    <string name="PREF_STRAVA_NOTIFICATION_TITLE">Notification</string>
    <string name="PREF_STRAVA_NOTIFICATION_SUMMARY">Display a notification on your Pebble after each upload</string>
    <string name="STRAVA_AUTO_TITLE">Automatic upload</string>
    <string name="STRAVA_AUTO_DIALOG_TITLE">Strava automatic upload</string>
    <string name="STRAVA_AUTO_DEFAULT">disable</string>
    <string name="STRAVA_UPLOAD_TYPE_TITLE">Upload file type</string>
    <string name="STRAVA_UPLOAD_TYPE_DIALOG_TITLE">Select TCX or GPX file upload to Strava</string>
    <string name="STRAVA_UPLOAD_TYPE_DEFAULT">tcx</string>
    <string name="TCX_ACTIVITY_TYPE_TITLE">TCX Activity Type</string>
    <string name="TCX_ACTIVITY_TYPE_DIALOG_TITLE">Type of activity as set in TCX file</string>
    <string name="TCX_ACTIVITY_TYPE_DEFAULT">Biking</string>
    <string name="PREF_STRAVA_VENTOO_CLUB_TITLE">Strava JayPS Club</string>
    <string name="PREF_STRAVA_VENTOO_CLUB_SUMMARY">Join other JayPS users</string>
    <string name="PREF_STRAVA_URL_VENTOO_CLUB">https://www.strava.com/clubs/ventoo</string>
    <string name="PREF_RUNKEEPER_CATEGORIE_TITLE">Runkeeper Integration</string>
    <string name="PREF_RUNKEEPER_CATEGORIE_SUMMARY"></string>
    <string name="PREF_RUNKEEPER_TITLE">Runkeeper</string>
    <string name="RUNKEEPER_ACTIVITY_TYPE_TITLE">Activity</string>
    <string name="RUNKEEPER_ACTIVITY_TYPE_DIALOG_TITLE">Runkeeper activity</string>
    <string name="RUNKEEPER_ACTIVITY_TYPE_DEFAULT">Running</string>
    <string name="PREF_RUNKEEPER_NOTIFICATION_TITLE">Notification</string>
    <string name="PREF_RUNKEEPER_NOTIFICATION_SUMMARY">Display a notification on your Pebble after each upload</string>
    <string name="RUNKEEPER_AUTO_TITLE">Automatic upload</string>
    <string name="RUNKEEPER_AUTO_DIALOG_TITLE">Runkeeper automatic upload</string>
    <string name="RUNKEEPER_AUTO_DEFAULT">disable</string>
    <string name="PREF_LIVE_TRACKING_JAYPS_CATEGORIE_TITLE">JayPS Live Tracking</string>
    <string name="PREF_LIVE_TRACKING_JAYPS_CATEGORIE_SUMMARY"></string>
    <string name="PREF_LIVE_TRACKING_JAYPS_TITLE">Live Tracking with JayPS</string>
    <string name="PREF_LIVE_TRACKING_JAYPS_SUMMARY">Create your account: http://pebblebike.com/live</string>
    <string name="PREF_LIVE_TRACKING_JAYPS_LOGIN_TITLE">Login</string>
    <string name="PREF_LIVE_TRACKING_JAYPS_LOGIN_SUMMARY"></string>
    <string name="PREF_LIVE_TRACKING_JAYPS_PASSWORD_TITLE">Password</string>
    <string name="PREF_LIVE_TRACKING_JAYPS_PASSWORD_SUMMARY"></string>
    <string name="PREF_LIVE_TRACKING_MMT_CATEGORIE_TITLE">Map My Tracks Live Tracking</string>
    <string name="PREF_LIVE_TRACKING_MMT_CATEGORIE_SUMMARY"></string>
    <string name="PREF_LIVE_TRACKING_MMT_TITLE">Live Tracking with Map My Tracks</string>
    <string name="PREF_LIVE_TRACKING_MMT_SUMMARY">http://www.mapmytracks.com</string>
    <string name="PREF_LIVE_TRACKING_MMT_LOGIN_TITLE">Login</string>
    <string name="PREF_LIVE_TRACKING_MMT_LOGIN_SUMMARY"></string>
    <string name="PREF_LIVE_TRACKING_MMT_PASSWORD_TITLE">Password</string>
    <string name="PREF_LIVE_TRACKING_MMT_PASSWORD_SUMMARY"></string>
    <string name="PREF_CHANGE_LOG_TITLE">Change Log</string>
    <string name="PREF_CHANGE_LOG_SUMMARY">Displays changes history</string>
    <string name="ble_unknown_device">Unknown device</string>
    <string name="ble_error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="PREF_GOOGLE_FIT_TITLE">Google Fit</string>
    <string name="PREF_GOOGLE_FIT_SUMMARY">Enable Google Fit recording for all your JayPS activity</string>
</resources>