<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/backgroundblue">

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@id/altitude_title_section">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altiudefragment_altitude"
            style="@style/SpeedLabel"
            android:id="@id/altitude_text"
            android:layout_weight="0.7"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@layout/gps_status"
                    android:contentDescription="graph"
                    android:id="@id/altitude_graph"
                    android:tint="#8eb7f5" />
                <TextView
                    style="@style/AltitudeStatus"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@id/altitude_status_value"
                    android:text="@string/altitude_status_disable"/>
                </LinearLayout>


            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altiudefragment_gpsstatus"
                style="@style/SpeedLabel"
                android:textSize="14dp"
                android:id="@id/altitude_gps_status"/>

        </LinearLayout>
        </LinearLayout>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent" android:id="@id/altitude_main_container"
        android:layout_below="@id/altitude_title_section">

        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar"
                android:layout_weight="0.07">
        </ImageView>

        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/altitude_bar_height" android:layout_gravity="center_horizontal|bottom"
                android:src="@drawable/alitude_bar" android:layout_marginLeft="@dimen/altitude_bar_left_margin"
                android:layout_weight="0.07">
        </ImageView>

    </LinearLayout>
</RelativeLayout>